@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-11
+2012-10-23 Andy Salnikov
+- upgrading to pdsdata V04-02-07
+- added new package andor with classes ConfigV1, FrameV1
+
 Tag: V00-03-10
 2012-10-10 Andy Salnikov
 - fix version numer for BldDataGMDV0
